--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="container">
   <!-- Blueprint header -->
+
   <header class="bp-header cf">
     <!-- <div class="dummy-logo">
       <h2 class="dummy-heading">Anabasis</h2>
     </div> -->
     <div class="bp-header__main">
       <span class="bp-header__present">Anabasis</span>
-      <h1 class="bp-header__title"><a href="codtympanus.net/codrops/2015/11/17/multi-level-menu/">Template adapted from Codrops</a></h1>
+      <h1 class="bp-header__title"><a target="_blank" href="https://tympanus.net/codrops/2015/11/17/multi-level-menu/">Template adapted from
+          Codrops</a></h1>
       <nav class="bp-nav">
         <!-- <a class="bp-nav__item bp-icon bp-icon--prev" href="http://tympanus.net/Blueprints/PageStackNavigation/" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
        -->
@@ -21,13 +23,86 @@
   <nav id="ml-menu" class="menu">
     <button class="action action--close" aria-label="Close Menu"><span class="icon icon--cross"></span></button>
     <div class="menu__wrap">
+
+
       <ul data-menu="main" class="menu__level" tabindex="-1" role="menu" aria-label="All">
-        <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1" aria-owns="submenu-1" href="#">Vegetables</a></li>
+        <li class="menu__item" role="menuitem" *ngFor="let documentIndex of documentIndices">
+          <a class="menu__link" [attr.data-submenu]="documentIndex.id" [attr.aria-owns]="documentIndex.id"
+          (click)="resetContent()"
+            href="#">{{documentIndex.title}}</a>
+        </li>
+      </ul>
+
+      <ng-container *ngFor="let documentIndex of documentIndices">
+        <ul [attr.data-menu]="documentIndex.id" [attr.id]="documentIndex.id" class="menu__level" tabindex="-1"
+          role="menu" aria-label="{{documentIndex.title}}">
+          <li *ngFor="let documentSubIndex of documentIndex.documentIndices" class="menu__item" role="menuitem">
+            <a class="menu__link"
+              [attr.data-submenu]="documentSubIndex.documentIndices.length > 0  ? documentSubIndex.id : null"
+              [attr.aria-owns]="documentSubIndex.documentIndices.length > 0  ? documentSubIndex.id : null"
+              (click)="loadContent(documentIndex.id, documentSubIndex.id)" href="#">{{documentSubIndex.title}}</a>
+          </li>
+        </ul>
+      </ng-container>
+
+
+      <ng-container *ngFor="let documentIndex of documentIndices">
+        <ng-container *ngFor="let documentSubIndex of documentIndex.documentIndices">
+          <ul *ngIf="documentIndex.documentIndices.length > 0" [attr.data-menu]="documentSubIndex.id"
+            [attr.id]="documentSubIndex.id" class="menu__level" tabindex="-1" role="menu"
+            aria-label="{{documentSubIndex.title}}">
+            <li *ngFor="let documentLastIndex of documentSubIndex.documentIndices" class="menu__item" role="menuitem">
+              <a class="menu__link" (click)="navigateToAnchor(documentLastIndex.id)" href="#">{{documentLastIndex.title}}</a>
+            </li>
+          </ul>
+
+        </ng-container>
+      </ng-container>
+
+
+      <!-- <ng-container *ngFor="let documentIndex of documentIndices">
+
+        <ul [attr.data-submenu]="documentIndex.id" [attr.id]="documentIndex.id" class="menu__level" tabindex="-1"
+          role="menu" [attr.aria-label]="documentIndex.title">
+          <li *ngFor="let subDocumentIndex of documentIndex.documentIndices" class="menu__item" role="menuitem">
+            <a class="menu__link" href="#">{{subDocumentIndex.title}}</a>
+          </li>
+        </ul>
+
+      </ng-container> -->
+
+      <!-- <ul data-menu="submenu-1-1" id="submenu-1-1" class="menu__level" tabindex="-1" role="menu" aria-label="Sale %">
+          <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Fair Trade Roots</a></li>
+          <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Dried Veggies</a></li>
+          <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Our Brand</a></li>
+          <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Homemade</a></li>
+        </ul> -->
+
+      <!-- <div *ngFor="let documentIndex of documentIndices">
+
+          <ul *ngFor="let documentSubIndex of documentIndex.documentIndices" data-menu="{{documentIndex.id}}" id="{{documentSubIndex.id}}" class="menu__level" tabindex="-1" role="menu"
+            aria-label="{{documentIndex.title}}">
+            <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Stalk Vegetables</a></li>
+            <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Roots &amp; Seeds</a></li>
+            <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Cabbages</a></li>
+            <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Salad Greens</a></li>
+            <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Mushrooms</a></li>
+            <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1-1"
+                aria-owns="submenu-1-1" href="#">Sale %</a></li>
+          </ul>
+       
+      </div> -->
+
+      <!-- 
+      <ul data-menu="main" class="menu__level" tabindex="-1" role="menu" aria-label="All">
+        <li class="menu__item" role="menuitem">
+          <a class="menu__link" data-submenu="submenu-1" aria-owns="submenu-1" href="#">Vegetables</a>
+        </li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-2" aria-owns="submenu-2" href="#">Fruits</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-3" aria-owns="submenu-3" href="#">Grains</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-4" aria-owns="submenu-4" href="#">Mylk &amp; Drinks</a></li>
       </ul>
-      <!-- Submenu 1 -->
+
       <ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="Vegetables">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Stalk Vegetables</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Roots &amp; Seeds</a></li>
@@ -36,14 +111,14 @@
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Mushrooms</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-1-1" aria-owns="submenu-1-1" href="#">Sale %</a></li>
       </ul>
-      <!-- Submenu 1-1 -->
+
       <ul data-menu="submenu-1-1" id="submenu-1-1" class="menu__level" tabindex="-1" role="menu" aria-label="Sale %">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Fair Trade Roots</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Dried Veggies</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Our Brand</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Homemade</a></li>
       </ul>
-      <!-- Submenu 2 -->
+    
       <ul data-menu="submenu-2" id="submenu-2" class="menu__level" tabindex="-1" role="menu" aria-label="Fruits">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Citrus Fruits</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Berries</a></li>
@@ -51,13 +126,13 @@
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Tropical Fruits</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Melons</a></li>
       </ul>
-      <!-- Submenu 2-1 -->
+
       <ul data-menu="submenu-2-1" id="submenu-2-1" class="menu__level" tabindex="-1" role="menu" aria-label="Special Selection">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Exotic Mixes</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Wild Pick</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Vitamin Boosters</a></li>
       </ul>
-      <!-- Submenu 3 -->
+  
       <ul data-menu="submenu-3" id="submenu-3" class="menu__level" tabindex="-1" role="menu" aria-label="Grains">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Buckwheat</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Millet</a></li>
@@ -66,14 +141,14 @@
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Durum Wheat</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-3-1" aria-owns="submenu-3-1" href="#">Promo Packs</a></li>
       </ul>
-      <!-- Submenu 3-1 -->
+ 
       <ul data-menu="submenu-3-1" id="submenu-3-1" class="menu__level" tabindex="-1" role="menu" aria-label="Promo Packs">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Starter Kit</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">The Essential 8</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Bolivian Secrets</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Flour Packs</a></li>
       </ul>
-      <!-- Submenu 4 -->
+
       <ul data-menu="submenu-4" id="submenu-4" class="menu__level" tabindex="-1" role="menu" aria-label="Mylk &amp; Drinks">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Grain Mylks</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Seed Mylks</a></li>
@@ -81,15 +156,41 @@
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Nutri Drinks</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-4-1" aria-owns="submenu-4-1" href="#">Selection</a></li>
       </ul>
-      <!-- Submenu 4-1 -->
+  
       <ul data-menu="submenu-4-1" id="submenu-4-1" class="menu__level" tabindex="-1" role="menu" aria-label="Selection">
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Nut Mylk Packs</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Amino Acid Heaven</a></li>
         <li class="menu__item" role="menuitem"><a class="menu__link" href="#">Allergy Free</a></li>
-      </ul>
+      </ul> -->
+
+
     </div>
   </nav>
   <div class="content">
+
+    <ng-container *ngFor="let documentItem of content">
+
+      <ng-container *ngIf="documentItem.isUrl">
+        <a target="_blank" href="{{documentItem.content }}">Source</a>
+        <br><br>
+      </ng-container>
+
+      <ng-container *ngIf="documentItem.isMainTitle">
+        <h2 [attr.id]="documentItem.id"> {{documentItem.content }}</h2>
+      </ng-container>
+
+      <ng-container *ngIf="documentItem.isSecondaryTitle">
+        <h3 [attr.id]="documentItem.id"> {{documentItem.content }}</h3>
+      </ng-container>
+
+      <ng-container *ngIf="!documentItem.isUrl && !documentItem.isSecondaryTitle && !documentItem.isMainTitle">
+         {{documentItem.content }}
+         <br><br>
+      </ng-container>
+
+    </ng-container>
+
+
     <!-- <p class="info">Choisissez un auteur</p> -->
     <!-- Ajax loaded content here -->
   </div>
