--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@
 
 .menu__wrap {
 	position: absolute;
-	top: 3.5em;
+	top: 2.5em;
 	bottom: 0;
 	overflow: hidden;
 	width: 100%;
@@ -232,7 +232,7 @@
 	font-size: 0.60em;
 	line-height: 1;
 	position: relative;
-	padding: 2.5em 3.75em 1em 2.5em;
+	padding: 2.5em 3.75em 1em 2em;
 	width: 600px;
 }
 
@@ -662,6 +662,31 @@ body #cdawrap a.carbon-poweredby {
 body #cdawrap a:hover.carbon-poweredby {
 	color: #fff;
 }
+input[type=text] {
+	/* width: 100%; */
+	/* padding: 12px 20px; */
+	/* margin: 8px 0; */
+	box-sizing: border-box;
+	border: 2px solid #5c5edc;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+	outline: none;
+  }
+input[type=text]:focus {
+	border: 2px solid #9a9bf5;
+  }
+
+  input[type=button], input[type=submit], input[type=reset] {
+	background-color: #5c5edc;
+	border: none;
+	color: white;
+	padding: 4px;
+	text-decoration: none;
+	margin: 4px 2px;
+	cursor: pointer;
+  }
+  
+  
 
 @media screen and (max-width: 40em) {
 	.bp-header {
