--- a/src/app/app.search.html
+++ b/src/app/app.search.html
@@ -1,13 +1,44 @@
 <div class="content">
-    <h2> {{searchPredicate}}</h2>
+    <h2 style="box-sizing: border-box;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em">Search results for: <span><u>{{searchPredicate}}</u></span></h2>
 
-    <ng-container *ngFor="let documentSearchResult of documentSearchResults">
+    <div *ngFor="let document of searchResult | keyvalue">
 
-        <div>{{documentSearchResult.mainTitle}}<span>{{documentSearchResult.peek}}</span></div>
+        <h3 style="margin-left: 10px;box-sizing: border-box;
+        margin-block-start: 0.5em;
+        margin-block-end: 0.5em">{{document.key}}</h3>
+
+        <ng-container *ngFor="let title of document.value | keyvalue">
+
+            <h4 style="margin-left: 20px;box-sizing: border-box;
+            margin-block-start: 0.5em;
+            margin-block-end: 0.5em">{{title.key}}</h4>
+
+            <ng-container *ngIf="title.value.length;">
+
+                <ng-container *ngFor="let result of title.value">
+                    <a [routerLink]="result.link()" class="menu__link" style="margin-left: 40px;font-size: 15px;line-height: 0;">{{result.peek}}</a>
+                </ng-container>
+
+            </ng-container>
+
+            <ng-container *ngIf="!title.value.length;">
+                <ng-container *ngFor="let subtitle of title.value | keyvalue">
+
+                    <h5 style="margin-left: 30px;box-sizing: border-box;
+                    margin-block-start: 0.5em;
+                    margin-block-end: 0.5em">{{subtitle.key}}</h5>
+
+                    <ng-container *ngFor="let result of subtitle.value">
+                        <a [routerLink]="result.link()" class="menu__link" style="margin-left: 40px;font-size: 15px;">"{{result.peek}}"</a>
+                    </ng-container>
+
+                </ng-container>
+            </ng-container>
+
+        </ng-container>
 
 
 
-    </ng-container>
-<!-- 
-<div>sdfsd<span>kkkkkkkkkk</span></div> -->
-</div>
+    </div>
