--- a/src/styles.css
+++ b/src/styles.css
@@ -126,8 +126,8 @@
 }
 
 .animate-outToRight .menu__item {
-	-webkit-animation: outToRight 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
-	animation: outToRight 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
+	-webkit-animation: outToRight 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
+	animation: outToRight 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 @-webkit-keyframes outToRight {
@@ -147,8 +147,8 @@
 }
 
 .animate-outToLeft .menu__item {
-	-webkit-animation: outToLeft 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
-	animation: outToLeft 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
+	-webkit-animation: outToLeft 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
+	animation: outToLeft 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 @-webkit-keyframes outToLeft {
@@ -168,8 +168,8 @@
 }
 
 .animate-inFromLeft .menu__item {
-	-webkit-animation: inFromLeft 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
-	animation: inFromLeft 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
+	-webkit-animation: inFromLeft 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
+	animation: inFromLeft 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 @-webkit-keyframes inFromLeft {
@@ -199,8 +199,8 @@
 }
 
 .animate-inFromRight .menu__item {
-	-webkit-animation: inFromRight 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
-	animation: inFromRight 0.6s both cubic-bezier(0.7, 0, 0.3, 1);
+	-webkit-animation: inFromRight 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
+	animation: inFromRight 0.3s both cubic-bezier(0.7, 0, 0.3, 1);
 }
 
 @-webkit-keyframes inFromRight {
@@ -388,7 +388,7 @@
 /* Main styles */
 
 body {
-	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
+    font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
 	overflow: hidden;
 	margin: 0;
 	color: #2b2828;
@@ -600,11 +600,17 @@ a:hover {
     /* min-height: 300px; */
     margin: 20px 20px 20px 600px;
     font-family: medium-content-serif-font, Georgia, Cambria, "Times New Roman", Times, serif;
-    font-size: 21px;
+    font-size: 18px;
 	color: rgba(41, 41, 41, 1);
 	letter-spacing: -0.003em;
 	line-height: 1.58;
 }
+
+.content-item {
+
+	margin-top: 15px;
+}
+
 .content>h2 {
 	margin-block-end: 5px;
 }
