--- a/src/app/app.document.html
+++ b/src/app/app.document.html
@@ -15,8 +15,12 @@
         </ng-container>
 
         <ng-container *ngIf="!documentItem.isUrl && !documentItem.isSecondaryTitle && !documentItem.isMainTitle">
-            <ng-container *ngIf="documentItem.isEmphasis; else elseBlock"><div class="content-item" ><u>{{documentItem.content}}</u></div></ng-container>
-            <ng-template #elseBlock><div class="content-item" >{{documentItem.content}}</div></ng-template>
+            <ng-container *ngIf="documentItem.isEmphasis; else elseBlock">
+                <div class="content-item"><u>{{documentItem.content}}</u></div>
+            </ng-container>
+            <ng-template #elseBlock>
+                <div class="content-item">{{documentItem.content}}</div>
+            </ng-template>
         </ng-container>
 
     </ng-container>
