--- a/src/app/app.search.html
+++ b/src/app/app.search.html
@@ -25,7 +25,7 @@
                     <ng-container *ngIf="title.value.length">
 
                         <ng-container *ngFor="let result of title.value">
-                            <div [routerLink]="result.link()" [queryParams]="{h: searchPredicate }"
+                            <div class="search-link" [routerLink]="result.link()" [queryParams]="{h: searchPredicate }"
                                 style="margin-left: 40px;font-size: 15px;">{{result.peek}}
                             </div>
                         </ng-container>
@@ -35,13 +35,13 @@
                     <ng-container *ngIf="!title.value.length;">
                         <ng-container *ngFor="let subtitle of title.value | keyvalue">
 
-                            <div *ngIf="title.toggle" style="margin-left: 30px;box-sizing: border-box;
+                            <div   *ngIf="title.toggle" style="margin-left: 30px;box-sizing: border-box;
                     margin-block-start: 0.5em;
                     margin-block-end: 0.5em">{{subtitle.key}}
 
                                 <ng-container *ngFor="let result of subtitle.value">
-                                    <a [routerLink]="result.link()" [queryParams]="{h: searchPredicate }"
-                                        class="menu__link"
+                                    <a class="search-link" [routerLink]="result.link()" [queryParams]="{h: searchPredicate }"
+                                       
                                         style="margin-left: 40px;font-size: 15px;">"{{result.peek}}"</a>
                                 </ng-container>
                             </div>
